chore(release): v0.1.2
